// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip correctly positions tooltip content based on position prop 1`] = `
<Manager>
  <Reference>
    <Component />
  </Reference>
  <Popper
    placement="top"
  >
    <Component />
  </Popper>
</Manager>
`;

exports[`Tooltip correctly positions tooltip content based on position prop 2`] = `
<Manager>
  <Reference>
    <Component />
  </Reference>
  <Popper
    placement="bottom"
  >
    <Component />
  </Popper>
</Manager>
`;

exports[`Tooltip correctly positions tooltip content based on position prop 3`] = `
<Manager>
  <Reference>
    <Component />
  </Reference>
  <Popper
    placement="left"
  >
    <Component />
  </Popper>
</Manager>
`;

exports[`Tooltip correctly positions tooltip content based on position prop 4`] = `
<Manager>
  <Reference>
    <Component />
  </Reference>
  <Popper
    placement="right"
  >
    <Component />
  </Popper>
</Manager>
`;
